--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Calculadora de Enfesto - EcoBrasil",
+  "name": "Calculadora de Enfesto Textil",
   "version": "1.0.0",
   "description": "Calculo de Enfesto EcoBrasil",
   "main": "main.js",
